2007-06-01 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* zebra.h: On linux, we seem to need to include <linux/types.h> before
	  <sys/sysctl.h>, otherwise we get isisd compilation errors about
	  __be16 not being defined.

2007-05-10 Paul Jakma <paul.jakma@sun.com>

	* zebra.h: Don't try define _GNU_SOURCE, autoconf should do it.

2007-05-03 Paul Jakma <paul.jakma@sun.com>

	* memtypes.c: Add MTYPE_ATTR_EXTRA and MTYPE_BGP_ROUTE_EXTRA

2007-05-01 David L Stevens <dlstevens@us.ibm.com>

	* (general) These changes collectively add route-map and
	  prefix-list support to zebra and fix a bug in "show
	  route-map" (with no argument).
	* command.h: added PROTOCOL_NODE type
	* log.c: (proto_name2num) new function, protocol name to
	  number translation.
	* routemap.c: (vty_show_route_map) fixed "show route-map"
	  without route-map name
	* routemap.h: added RMAP_ZEBRA type
	* zebra.h: added proto_name2num() prototype

2007-04-29 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* log.c: (quagga_timestamp) Optimize the subsecond timestamp generation.

2007-04-28 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* command.c: (config_write_host) Save "log timestamp precision"
	  if not default value.
	  (show_logging) Show configured timestamp precision.
	  (config_log_timestamp_precision) Enable configuration of timestamp
	  precision.
	  (no_config_log_timestamp_precision) Restore default timestamp
	  precision.
	  (cmd_init) Install new timestamp precision commands.
	* log.h: (struct zlog) New timestamp_precision field.
	  (quagga_timestamp) New function to generate a timestamp with the
	  desired precision.
	  (struct timestamp_control) Declare a structure for use in avoiding
	  repeated duplicate calls to quagga_timestamp.
	* log.c: (quagga_timestamp) New function to generate a timestamp
	  of the desired precision.
	  (time_print) Call quagga_timestamp if the time hasn't already been
	  calculated.